--- a/templates/pages/editprofile.html
+++ b/templates/pages/editprofile.html
@@ -4,7 +4,7 @@
 
 <div class="container myprofile-wrapper">
 
-    <div class="row welcome-row justify-content-center align-items-center">
+    <div class="row welcome-row justify-content-center mt-5 align-items-center">
         <div class="col-12">
             <h1 class="profile-nav">Edit your Profile</h1>
 
