--- a/static/scss/_user_area.scss
+++ b/static/scss/_user_area.scss
@@ -41,14 +41,21 @@ padding: 0.3rem !important;
     max-width: 80%;
     margin: 5vh auto;
     border-radius: 25px;
+
+    @media (max-width: $bp-mobile) {
+        margin-top: 15vh;
+    }
 }
 
 #profile-description {
     min-height: 15vh;
     height: auto;
     margin-bottom: 5vh;
-    margin-left: 2vw;
-    margin-right: 2vw;
+}
+
+.profile-messages {
+    display: block;
+    margin-top: 5vh;
 }
 
 .profile-label {
@@ -64,6 +71,7 @@ padding: 0.3rem !important;
 .profile-subnav {
     font-family: 'Share Tech Mono', monospace;
     margin-left: 10vw;
+    min-height: 10vh;
 
     @media (max-width: $bp-mobile) {
         font-size: 1rem;
