--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -22,7 +22,8 @@
 
                 <div class="col-2">
 
-                    <button type="submit" class="btn btn-danger btn-large" name="btn" value="unpublish">Unpublish
+                    <button type="submit" class="btn btn-danger btn-large" id="desktop-unpublish" name="btn"
+                        value="unpublish">Unpublish
                         Profile</button>
                 </div>
             </form>
@@ -336,10 +337,21 @@
 
 <div class="row justify-content-center">
 
-    <button type="submit" class="btn btn-primary btn-large userarea-btn mt-5 mb-5" name="btn" value="preview">Preview
-        Profile</button>
+    <div class="row-12">
 
-    <button type="submit" class="btn btn-primary btn-large userarea-btn mt-5 mb-5" name="btn" value="edit">Edit</button>
+        <button type="submit" class="btn btn-primary btn-large userarea-btn mt-5 mb-5" name="btn"
+            value="preview">Preview
+            Profile</button>
+
+        <button type="submit" class="btn btn-primary btn-large userarea-btn mt-5 mb-5" name="btn"
+            value="edit">Edit</button>
+    </div>
+
+    <div class="col-12 d-flex justify-content-center mb-2">
+            <button type="submit" class="btn btn-danger btn-large" id="mobile-unpublish" name="btn"
+            value="unpublish">Unpublish
+            Profile</button>
+    </div>
 </div>
 
 </form>
