--- a/templates/components/profile_card.html
+++ b/templates/components/profile_card.html
@@ -1,13 +1,15 @@
 <a href="{{url_for('user_details', username=profile.username)}}">
-        <div class="card">
-            <img src="{{profile.imgURL}}" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">{{profile.username}}</h5>
+    <div class="card">
+        <img src="{{profile.imgURL}}" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">{{profile.username}}</h5>
+            <div class="text-container">
                 <p class="card-text">{{profile.shortDescription}}</p>
             </div>
-            <div class="card-footer">
-                <p class="card-callout"><i class="fas fa-search-plus card-icon"
-                        data-fa-transform="shrink-3"></i>Click for more!</p>
-            </div>
         </div>
-    </a>
+        <div class="card-footer">
+            <p class="card-callout"><i class="fas fa-search-plus card-icon" data-fa-transform="shrink-3"></i>Click for
+                more!</p>
+        </div>
+    </div>
+</a>
