--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -248,14 +248,14 @@
 
 
                 {% if loop.index % 2 == 1 %}
-                <div class="col-6 justify-content-center mt-3">
+                <div class="col-12 col-md-6 justify-content-center mt-3">
                     {% include 'components/profile_card.html' %}
                 </div>
 
                 {% endif %}
 
                 {% if loop.index % 2 == 0 %}
-                <div class="col-6 justify-content-center mt-3">
+                <div class="col-12 col-md-6 justify-content-center mt-3">
                     {% include 'components/profile_card.html' %}
                 </div>
                 {% endif %}
