--- a/static/css/main.css
+++ b/static/css/main.css
@@ -531,12 +531,6 @@ ul {
   height: 30vh;
 }
 
-@media (max-width: 768px) {
-  .card-body {
-    height: 60vh;
-  }
-}
-
 .card-footer {
   background-color: #2581B0;
   font-family: 'Roboto', sans-serif;
@@ -835,6 +829,12 @@ ul {
           align-items: stretch;
 }
 
+@media (max-width: 768px) {
+  .wrapper {
+    height: 350vh;
+  }
+}
+
 #sidebar {
   background: #2581B0;
   color: #fff;
@@ -998,12 +998,6 @@ ul ul a {
   margin-left: 1em;
 }
 
-@media (max-width: 691px) {
-  .bootstrap-select > .dropdown-toggle {
-    width: 60vw;
-  }
-}
-
 .search-btn {
   background-color: #05081f !important;
   background-repeat: repeat-x;
@@ -1052,13 +1046,6 @@ ul ul a {
 @media (min-width: 521px) {
   #content {
     margin-left: 10vw;
-  }
-}
-
-@media (max-width: 691px) {
-  #content {
-    min-height: 500vh;
-    height: auto;
   }
 }
 
