--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -17,7 +17,7 @@
     color: #fff;
 
     padding-top: 2rem;
-    transition: all 1s ease;
+    // transition: all 1s ease;
 
     width: 0;
     min-height: 100vh;
@@ -30,7 +30,7 @@ margin-left: 0;
     }
 
     @media (min-width: $bp-desktop) {
-        width: 35vw;
+        width: 50vw;
         margin-left:0;
     }
 
@@ -43,6 +43,10 @@ margin-left: 0;
 #sidebarCollapse {
     @media (min-width: $bp-ipadpro) {
         margin-left: 15vw;
+    }
+
+    @media (max-width: $bp-mobile) {
+        margin-right: 5rem;
     }
 
     background-color: $pink;
@@ -59,12 +63,9 @@ margin-left: 0;
 
     @media (min-width: $bp-mobile) {
         margin-left: 0;
-        width: 40%
+        width: 60%
     }
 
-    @media (min-width: $bp-desktop) {
-        margin-left: 0;
-    }
 }
 
 a[data-toggle="collapse"] {
@@ -73,23 +74,23 @@ a[data-toggle="collapse"] {
 }
 
 #sidebar .sidebar-header {
-    padding: 20px;
+    // padding: 20px;
     background: $brightmidblue;
     text-transform: uppercase;
 }
 
 #sidebar ul.components {
-    padding: 20px 0;
+    // padding: 20px 0;
     border-bottom: 1px solid $midblue;
 }
 
 #sidebar ul p {
     color: #fff;
-    padding: 10px;
+    // padding: 10px;
 }
 
 #sidebar ul li a {
-    padding: 10px;
+    // padding: 10px;
     font-size: 0.9em;
     display: block;
 }
@@ -107,7 +108,7 @@ a[aria-expanded="true"] {
 
 ul ul a {
     font-size: 0.7em !important;
-    padding-left: 30px !important;
+    // padding-left: 30px !important;
     background: $midblue;
 }
 
@@ -186,7 +187,7 @@ ul ul a {
     font-size: 1rem;
     line-height: 1.5;
     border-radius: .25rem;
-    margin-left: 5vw;
+    margin-left: 15vw;
 }
 
 #clear-btn:hover {
