Wrap index carousel indicators in row.

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -115,7 +115,7 @@
 
                 <!-- End inner carousel -->
             </div>
-            <div class="indicator-wrapper">
+            <div class="row indicator-wrapper">
                 <ol class="carousel-indicators">
                     <li data-target="#index-carousel" data-slide-to="0" class="active"></li>
                     <li data-target="#index-carousel" data-slide-to="1" class></li>
