--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -140,21 +140,29 @@ h3.heading {
 // Footer
 
 footer {
+
+    height: 10vh;
     position: relative;
-    height: 15vh !important;
     width: 100% !important;
     background-color: $darkblue;
     display: block;
+ 
 
 
     color: $brightmidblue;
     text-transform: uppercase;
-    font-size: 0.8em;
+    font-size: 1em;
     font-family: 'Montserrat', sans-serif;
     text-align: center !important;
+
+    @media (max-width: $bp-mobile) {
+        height: 35vh;
+        font-size: 0.7em;
+    }
 }
 
 .footer {
+
     position: absolute;
     bottom: 0;
     left: 0;
@@ -163,6 +171,18 @@ footer {
     padding-bottom: 0;
     z-index: 999;
 
+
+}
+
+.footer-col {
+    @media (max-width: $bp-mobile) {
+        margin-bottom: 1rem;
+    }
+}
+
+
+.copyright {
+    padding-bottom: 2rem;
 
 }
 
