--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -2,7 +2,37 @@
 <!-- column sizes in footer different on activities page because of filters bar on right making the width of the footer smaller -->
 <footer>
     <div class="container-fluid footer">
+        <!--- Copyright -->
 
+        <div class="footer-content">
+            <div class="row footer-row mt-0 ">
+                <div class="col-12 col-md-4 footer-col">
+                    <h6 class="d-block"><i class="fas fa-at"></i>Contact</h6>
+                    <p class="d-inline d-md-block">E-Mail: carrie.poell@gmail.com</p>
+                </div>
+
+                <!--- Github link & logo -->
+
+                <div class="col-12 col-md-4 mb-1 footer-col">
+                    <h6 class="d-block">Github</h6>
+                    <a href="https://github.com/synnea" target="_blank"><i class="fab fa-github github-logo"></i></a>
+                </div>
+
+                <!--- Link to data source from Kaggle -->
+
+
+                <div class="col-12 d-none d-md-block footer-col">
+                    <div>For educational purposes only.</div>
+                </div>
+            </div>
+
+            <div class="row copyright justify-content-center">
+                <div class="col-12">
+                    <div>&copy;2019 Carina Poell</div>
+                </div>
+
+            </div>
+        </div>
     </div>
 </footer>
 
