--- a/static/css/main.css
+++ b/static/css/main.css
@@ -143,6 +143,10 @@ footer {
   }
 }
 
+.row {
+  margin-right: 0;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -331,6 +335,10 @@ footer {
     height: 35vh;
     font-size: 0.7em;
   }
+}
+
+.row {
+  margin-right: 0;
 }
 
 .footer {
@@ -746,6 +754,10 @@ footer {
     height: 35vh;
     font-size: 0.7em;
   }
+}
+
+.row {
+  margin-right: 0;
 }
 
 .footer {
