Fix search bug.

--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -36,8 +36,8 @@
 
                     <div class="form-check">
                         <input class="form-check-input search-card" type="checkbox" name="skill" value="{{skill}}"
-                            id="skill-box">
-                        <label class="form-check-label" for="skill-box">
+                            id="{{skill}}">
+                        <label class="form-check-label" for="{{skill}}">
                             {{skill}}
                         </label>
                     </div>
@@ -50,8 +50,8 @@
 
                     <div class="form-check">
                         <input class="form-check-input search-card" type="checkbox" name="skill" value="{{skill}}"
-                            id="skill-box" checked>
-                        <label class="form-check-label" for="skill-box">
+                            id="{{skill}}" checked>
+                        <label for="{{skill}}" class="form-check-label" for="skill-box">
                             {{skill}}
                         </label>
                     </div>
