--- a/static/scss/_user_area.scss
+++ b/static/scss/_user_area.scss
@@ -39,7 +39,7 @@ padding: 0.3rem !important;
 
 .profile-jumbo {
     max-width: 80%;
-    margin: 0 auto;
+    margin: 2rem auto;
     border-radius: 25px;
 
     @media (max-width: $bp-mobile) {
@@ -96,6 +96,9 @@ padding: 0.3rem !important;
 
     @include custom-btn;
     margin: 0 3rem;
+    width: 6rem;
+
+
 
 }
 
