--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -4,7 +4,7 @@
 
 <section id="about">
 
-    <div class="img-overlay-about">&nbsp;</div>
+    <div class="img-overlay-about" id="about-overlay">&nbsp;</div>
 
     <div class="container-fluid about-wrapper">
 
