--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -15,7 +15,7 @@
 
                 <div class="col-12 col-md-4 mb-1 footer-col">
                     <h6 class="d-block">Github</h6>
-                    <a href="https://github.com/synnea" target="_blank"><i class="fab fa-github github-logo"></i></a>
+                    <a href="https://github.com/synnea" target="_blank"><i class="fab fa-github github-logo hvr-bounce-in"></i></a>
                 </div>
 
                 <!--- Link to data source from Kaggle -->
