Revise data schema for readme.

--- a/templates/pages/user_details.html
+++ b/templates/pages/user_details.html
@@ -2,8 +2,6 @@
 
 {% block content %}
 
-<!-- I used the following code snippet as a starting point for designing the user details page: https://bootsnipp.com/snippets/D0A6A-->
-
 <div class="container user-wrapper">
 
     {% if preview == True %}
@@ -94,7 +92,8 @@
 
             <div class="col-12 col-md-3 ud-col">
                 <i class="fas fa-at"></i>
-                <h5 class="d-inline">Communication</h5>
+                <h5 class="d-inline">Communi- </br>
+                    cation</h5>
 
             </div>
 
