--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -18,6 +18,7 @@ $pink: #ee4266;
 // Media query breakpoints
 
 $bp-mini: 576px;
+$bp-landscape: 667px;
 $bp-mobile: 768px;
 $bp-tablet: 992px;
 $bp-ipadpro: 1024px;
