--- a/static/scss/_index.scss
+++ b/static/scss/_index.scss
@@ -9,6 +9,10 @@
 @mixin height-scaling {
     height: 60vh;
 
+    @media (orientation: landscape) {
+        height: 100vh;
+    }
+
     @media (min-width: $bp-tablet) {
         height: 70vh;
     }
